[package]
name = "evice-multi-sequencer"
version = "0.1.0"
edition = "2021"
description = "Lightweight multi-sequencer consensus and P2P networking library"

[dependencies]
# Runtime
tokio = { version = "1", features = ["full"] }
rand = "0.10.1"

# Consensus & P2P
libp2p = { version = "0.56.0", features = ["full", "rsa"] }
libp2p-request-response = { version = "0.29.0", features = ["cbor"] }
async-recursion = "1.1.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "3.8.1", features = ["macros"] }
serde_bytes = "0.11"
serde_json = "1.0"
bincode = { version = "2.0.1", features = ["serde"] }
borsh = { version = "1.5.7", features = ["derive"] }
hex = "0.4.3"

# Cryptography
pqcrypto-dilithium = "0.5.0"
pqcrypto-traits = "0.3.5"
schnorrkel = { version = "0.11.5", features = ["getrandom"] }
sha2 = "0.11.0"
sha3 = "0.12.0"
chacha20poly1305 = { version = "0.10.1", features = ["alloc"] }
cipher = { version = "0.5.2", features = ["alloc"] }
scrypt = "0.12.0"
zeroize = "1.8.1"

# Utilities
log = "0.4.22"
lru = "0.18.0"
thiserror = "2.0.18"
uuid = { version = "1.8", features = ["v4"] }